--- a/stylemart/src/styles/footer.css
+++ b/stylemart/src/styles/footer.css
@@ -3,9 +3,6 @@
   color: white;
   text-align: center;
   padding: 1.5rem 0;
-  position: fixed;   
-  bottom: 0;
-  left: 0;
   width: 100%;
 }
 .email-cont{
